2021-12-29  Stefan Monnier <monnier@iro.umontreal.ca>

	Correct the uses of unnecessary autoload cookies.

	Delete unnecessary :group arguments to defcustom.

	Use the built-in function invisible-p to replace a hand-made
	function ilist-invisible-property-p.

2021-12-28  李俊緯  <mmemmew@gmail.com>

	* blist.el: Add the variable blist-filter-features to choose how
	to combine the fixed and the automatic filter groups.

	Also update documentation files accordingly.

2021-12-23  Durand  <mmemmew@gmail.com>

	Update documentation.

2021-12-22  李俊緯  <mmemmew@gmail.com>

	New user option: blist-use-header-p.  Now the user can choose to
	use the header line to display the column names.

2021-12-21  李俊緯  <mmemmew@gmail.com>

	Fix errors discovered by flymake.

2021-12-20  李俊緯  <mmemmew@gmail.com>

	* blist.el: Fix bugs caused by using invisible texts.

2021-12-19  JSDurand  <mmemmew@gmail.com>

	* blist.el: Implement hiding groups by buffer-invisibility-spec.

2021-09-17  JSDurand  <mmemmew@gmail.com>

	* blist.el (blist-relocate): Fix a bug caused by a typo.

2021-09-17  JSDurand  <mmemmew@gmail.com>

	Add Info and PDF manuals
	* README.org (Columns, Calling convention(s)): Fix some typos.

	* blist.texinfo: Source of manuals.

	* blist.info: An Info manual that is suitable for reading inside
	  Emacs.

	* blist.pdf: For those without Emacs, a PDF manual is provided as an
	  unfortunate fallback.

	* scaled-screenshot1.png: Scale down the screen shot to fit in the
	  display in the Info manual.

2021-09-17  JSDurand  <mmemmew@gmail.com>

	Fix bugs caused by empty annotations.

2021-09-16  JSDurand  <mmemmew@gmail.com>

	Fix some README issues and add README.

2021-09-16  JSDurand  <mmemmew@gmail.com>

	Implement editing annotations.

2021-09-16  JSDurand  <mmemmew@gmail.com>

	Implement loading functionality.

2021-09-15  JSDurand  <mmemmew@gmail.com>

	Fix a wrong function call.

2021-09-15  JSDurand  <mmemmew@gmail.com>
